--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "scripts": {
-    "app": "npx webpack serve",
+    "app": "npx webpack serve --port 9001 ",
     "monitor": "npx webpack serve --port 9000 --entry ./node_modules/chatroom-client/src/testApp.ts"
   },
   "dependencies": {
