--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,7 +1,15 @@
-[project]
+[tool.poetry]
 name = "grapycal"
 version = "0.1.0"
-dependencies = [
-    'objectsync >= 0.3.0',
-    'PyYAML == 6.0' 
-]
+description = ""
+authors = ["eri24816 <a931eric@gmail.com>"]
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.11"
+objectsync = { git = "https://github.com/eri24816/ObjectSync.git", branch = "test-poetry-eric"}
+pyyaml = "^6.0"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
