--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "grapycal-client",
   "version": "0.1.1",
   "main": "app.ts",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "devDependencies": {
     "@web/dev-server": "^0.1.35",
     "ts-loader": "^9.4.2",
