enable poetry auto-update action, npm i directly * add chatroom_client ad objectsync_client github link into package dependencies * add gh-action to update chatroom and objectsync in poetry deps on push and PR

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "monitor": "npx webpack serve --port 9000 --entry ./node_modules/chatroom-client/src/testApp.ts"
   },
   "dependencies": {
-    "objectsync-client": "file:../../ObjectSyncClient_ts"
+    "chatroom-client": "github:eri24816/ChatRoomClient_ts#main",
+    "objectsync-client": "github:eri24816/ObjectSyncClient_ts#master"
   },
   "include": [
     "src/css.d.ts"
