--- a/.github/workflows/docgen.yml
+++ b/.github/workflows/docgen.yml
@@ -19,13 +19,10 @@ jobs:
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
 
-      - name: Install docs dependencies
+      - name: Install docs dependencies & Generate
         run: |
           cd backend && poetry install --only docs
-      
-      - name: Generate document
-        run: |
-          cd backend/docs && make html
+          cd docs && make html
         
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
