--- a/.github/workflows/docgen.yml
+++ b/.github/workflows/docgen.yml
@@ -28,6 +28,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: build/html
+          publish_dir: backend/docs/build/html
           force_orphan: true
       
