Fix reload bug. Improve torch ext.. Add ActiveNode

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 1_backend_run.bat
 2_frontend_run.bat
 
-.grapycal
+*.grapycal
 *.pyc
 
 # For early development, the grapycal_torch extension is included in this repo.
