Enable pasting image

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "monitor": "npx webpack serve --port 9000 --entry ./node_modules/chatroom-client/src/testApp.ts"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "chatroom-client": "github:eri24816/ChatRoomClient_ts#main",
     "objectsync-client": "github:eri24816/ObjectSyncClient_ts#master"
   },
