--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,7 +19,7 @@ documentation = "https://eri24816.github.io/Grapycal/"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-objectsync = "^0.5.0"
+objectsync = "^0.5.1"
 pyyaml = "^6.0"
 dacite = "^1.8.1"
 usersettings = "^1.1.5"
@@ -32,6 +32,14 @@ sphinx = "~7.0"
 furo = "~2023.5"
 sphinx-autoapi = "~2.1"
 
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+tag_format = "v$version"
+version_scheme = "pep440"
+version_provider = "poetry"
+update_changelog_on_bump = true
+major_version_zero = true
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
