--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "app": "npx webpack serve --port 9001 ",
-    "monitor": "npx webpack serve --port 9000 --entry ./node_modules/chatroom-client/src/testApp.ts"
+    "monitor": "npx webpack serve --port 9000 --entry ./node_modules/chatroom-client/src/testApp.ts",
+    "build": "npx webpack --mode development"
   },
   "dependencies": {
     "@types/three": "^0.157.0",
