--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,7 @@
             "type": "python",
             "request": "launch",
             "module": "grapycal",
+            "args": ["--no-serve-webpage"],
             "justMyCode": true,
             "cwd": "${workspaceFolder}/test_working_dirs/working_dir_2"
         }
