--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,7 @@ objectsync = "^0.7.1"
 pyyaml = "^6.0"
 dacite = "^1.8.1"
 usersettings = "^1.1.5"
+bson = "^0.5.10"
 
 [tool.poetry.group.docs]
 optional = true
