refactor: rearrange project structure to enable production

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -45,9 +45,10 @@ update_changelog_on_bump = true
 major_version_zero = true
 version_files = [
     "docs/source/conf.py:release",
+    "__init__.py:__version__",
     "../frontend/package.json:version",
-    "../grapycal_builtin/pyproject.toml:version",
-    "../grapycal_builtin/pyproject.toml:grapycal",
+    "../extensions/grapycal_builtin/pyproject.toml:version",
+    "../extensions/grapycal_builtin/pyproject.toml:grapycal",
 ]
 
 pre_bump_hooks = [
