--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 backend/src/grapycal/webpage
 frontend/dist/main.js
 test_working_dirs/working_dir_2/pose_landmarker_heavy.task
+
+/production/dist/
