--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,7 @@ pyyaml = "^6.0"
 dacite = "^1.8.1"
 usersettings = "^1.1.5"
 bson = "^0.5.10"
+requests = "^2.31.0"
 
 [tool.poetry.group.docs]
 optional = true
