--- a/.github/workflows/docgen.yml
+++ b/.github/workflows/docgen.yml
@@ -1,7 +1,8 @@
 name: Generate document
-on: push
-  branches:
-    - main
+on: 
+  push:
+    branches:
+      - main
     
 permissions:
   contents: write
