feat: shorten the command to only `grapycal`

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -60,3 +60,6 @@ pre_bump_hooks = [
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+grapycal = "grapycal.__main__:main"
