--- a/charts/grapycal-frontend/templates/service.yaml
+++ b/charts/grapycal-frontend/templates/service.yaml
@@ -1,15 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "grapycal-frontend.fullname" . }}
+  name: {{ .Values.frontend.name }}
+  namespace: {{ .Values.namespace }}
   labels:
-    {{- include "grapycal-frontend.labels" . | nindent 4 }}
+    app: {{ .Values.appName }}
+    tier: frontend
+    meta.helm.sh/release-name: {{ .Release.Name }}
+    meta.helm.sh/release-namespace: {{ .Release.Namespace }}
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ .Values.frontend.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
+    - port: {{ .Values.frontend.service.port }}
+      targetPort: 80
       protocol: TCP
-      name: http
   selector:
-    {{- include "grapycal-frontend.selectorLabels" . | nindent 4 }}
+    app: {{ .Values.appName }}
+    tier: frontend
