--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,25 +9,11 @@ repos:
     -   id: check-yaml
     -   id: check-added-large-files
 
--   repo: https://github.com/psf/black
-    rev: 23.12.0
+-   repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.1.9
     hooks:
-    -   id: black
-        name: black
-        files: .py$
--   repo: https://github.com/PyCQA/isort
-    rev: 5.13.2
-    hooks:
-    -   id: isort
-        name: isort
-        exclude: migrations/
-        files: .py$
--   repo: https://github.com/PyCQA/flake8
-    rev: 6.1.0
-    hooks:
-    -   id: flake8
-        name: flake8
-        files: .py$
-        args:
-        -   --max-line-length=100
-        -   --ignore=E402
+    # Run the formatter.
+    -   id: ruff-format
+    # Run the linter.
+    -   id: ruff
