--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -17,6 +17,7 @@ jobs:
               with:
                 node-version: 20
                 cache: 'npm'
+                cache-dependency-path: frontend/package-lock.json
             - name: Build the app
               run: |
                 cd frontend && npm ci && npm run build
