--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -36,7 +36,7 @@ jobs:
               uses: docker/build-push-action@v4
               with:
                 context: .
-                file: ./Dockerfile.fontend
+                file: ./Dockerfile.frontend
                 platforms: linux/amd64,linux/arm64
                 tags: docker.io/${{ secrets.DOCKER_USERNAME }}/grapycal-frontend:latest
                 outputs: type=oci,dest=/tmp/image.tar
