--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "webpack-dev-server": "^4.11.1"
   },
   "scripts": {
-    "app": "npx webpack serve --port 9001 ",
+    "app": "npx webpack serve --port 9001 --config webpack.config.dev.js",
+    "serv": "npx webpack serve --port 9001 --config webpack.config.service.js",
+    "stan": "npx webpack serve --port 9001 --config webpack.config.standalone.js",
     "monitor": "npx webpack serve --port 9000 --entry ./node_modules/chatroom-client/src/testApp.ts",
     "prebuild": "node -p \"'export const LIB_VERSION = ' + JSON.stringify(require('./package.json').version) + ';'\" > src/version.ts",
     "build": "npx webpack --mode development",
