ci: update frontend service

--- a/charts/grapycal-frontend/templates/service.yaml
+++ b/charts/grapycal-frontend/templates/service.yaml
@@ -9,7 +9,7 @@ metadata:
     meta.helm.sh/release-name: {{ .Release.Name }}
     meta.helm.sh/release-namespace: {{ .Release.Namespace }}
 spec:
-  type: {{ .Values.frontend.type }}
+  type: {{ .Values.frontend.service.type }}
   ports:
     - port: {{ .Values.frontend.service.port }}
       targetPort: 80
