--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -20,7 +20,7 @@ jobs:
                 cache-dependency-path: frontend/package-lock.json
             - name: Build the app
               run: |
-                cd frontend && npm ci && npm run build
+                cd frontend && npm ci && npm run build:service
             - name: Set up QEMU
               uses: docker/setup-qemu-action@v3
             - name: Set up Docker Buildx
