--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,7 +1,10 @@
-FROM nginx:latest
+FROM --platform=linux/amd64 nginx:latest
 
 COPY ./frontend/dist /usr/share/nginx/html
 
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
+RUN rm -rf /etc/nginx/conf.d/default.conf
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
