--- a/.github/workflows/workspace-ci-prod.yml
+++ b/.github/workflows/workspace-ci-prod.yml
@@ -34,6 +34,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
+            ${{ github.repository }}-workspace
             ghcr.io/${{ github.repository }}-workspace
           tags: |
             type=semver,pattern=v{{version}}
